fix a layout problem,

--- a/app/assets/stylesheets/blocks/reply.scss
+++ b/app/assets/stylesheets/blocks/reply.scss
@@ -1,11 +1,22 @@
 .reply {
   &__container {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    //align-items: center;
   }
 
   &__content {
     flex-grow: 1;
+  }
+
+  &__sub-section {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  &__additional-info {
+
   }
 
   &__like-container {
